--- a/_less/hs-custom-styling.less
+++ b/_less/hs-custom-styling.less
@@ -12,7 +12,7 @@
   }
 
   form .input {
-    height: fit-content;
+    // height: fit-content;
   }
 
   input,
