--- a/_less/style.less
+++ b/_less/style.less
@@ -126,3 +126,11 @@ h3 {
 //     }
 
 // }
+
+.saleslp-testimonials,
+.white-tile_home-quote,
+.saleslp-form-layout {
+  img {
+    width: auto;
+  }
+}
